<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">#NosUne</string>
    <string name="hello_world">Hello world!</string>
    <string name="text_with_bullet">\u02C4</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>


    <!--Menu-->
    <string name="action_settings">Settings</string>
    <string name="action_settings2">Settings2</string>

    <!--Configuracion WS-->

    <string name="URL">http://servicios-ie.telcel.com/TelcelNosUne/WServices/mi_ws1.php</string>
    <string name="tokenXM">67d6b32e8d96b8542feda3df334c04f5</string>
    <string name="NAMESPACE">urn:mi_ws1</string>
    <string name="SOAP_ACTION">urn:mi_ws1#</string>
    <string name="USERNAME_HEADER">appnune</string>
    <string name="PASS_HEADER">#n05un3</string>


    <!--Actualiza Trabajador-->
    <string name="asignado">Female</string>
    <string name="personal">Display</string>

    <string-array name="region">
        <item>Región 1</item>
        <item>Región 2</item>
        <item>Región 3</item>
        <item>Región 4</item>
        <item>Región 5</item>
        <item>Región 6</item>
        <item>Región 7</item>
        <item>Región 8</item>
        <item>Región 9</item>
        <item>AMX</item>
        <item>Corporativo</item>
    </string-array>

    <string-array name="direccion">
        <item>DIR ADMINISTRACION DE PROYECTOS</item>
        <item>DIR ADMON DE PRODUCTOS FIJOS</item>
        <item>DIR ANUNCIOS EN DIRECTORIOS</item>
        <item>DIR AREA AMX</item>
        <item>DIR COMERCIAL OP FIJAS</item>
        <item>DIR COMISION A OTROS PAISES</item>
        <item>DIR COMPRAS</item>
        <item>DIR CONTENIDOS CMI</item>
        <item>DIR DESARROLLO CORPORATIVO</item>
        <item>DIR EJECUTIVA DE UNIDADES REGIONALES</item>
        <item>DIR FINANZAS Y ADMINISTRACION</item>
        <item>DIR FINANZAS Y ADMON AM</item>
        <item>DIR GENERAL</item>
        <item>DIR IMPLANTACION CORPORATIVA</item>
        <item>DIR INFORMATICA</item>
        <item>DIR INGENIERIA Y CALIDAD DE RED</item>
        <item>DIR JURIDICA AM</item>
        <item>DIR MERCADOTECNIA</item>
        <item>DIR MULTIMEDIA Y ALIANZAS ESTRATEGICAS</item>
        <item>DIR OPERACION Y MANTENIMIENTO</item>
        <item>DIR OPERACIONES FIJAS</item>
        <item>DIR OPERACIONES MOVILES</item>
        <item>DIR OPERACIONES REGION 9</item>
        <item>DIR PLAN FINANCIERA Y OPERACION OP FIJAS</item>
        <item>DIR RECURSOS HUMANOS</item>
        <item>DIR REGIONAL BAJA CALIFORNIA</item>
        <item>DIR REGIONAL CENTRO</item>
        <item>DIR REGIONAL GOLFO SUR</item>
        <item>DIR REGIONAL NORESTE</item>
        <item>DIR REGIONAL NOROESTE</item>
        <item>DIR REGIONAL NORTE</item>
        <item>DIR REGIONAL OCCIDENTE</item>
        <item>DIR REGIONAL SURESTE</item>
        <item>DIR SERVICIOS DE VALOR AGREGADO</item>
        <item>DIR SERVICIOS INTERNACIONALES Y MAYORISTAS</item>
        <item>DIR TESORERIA Y ADMON DE RIESGOS AM</item>
        <item>SUBDIR EJECUTIVA DE ASUNTOS CORPORATIVOS</item>
        <item>SUBDIR EJECUTIVA DE ASUNTOS REGULATORIOS</item>
    </string-array>

    <string name="mensajeActualizado">Tus datos han sido actualizados</string>
    <string name="tituloActualizado">MODIFICAR O ACTUALIZAR DATOS</string>

    <!--Strings List View Ayuda -->

    <string name="preguntas">PREGUNTAS FRECUENTES</string>
    <string name="preguntasdesc">Información de ayuda.</string>

    <string name="fallas">REPORTAR FALLAS</string>
    <string name="fallasdesc">Informar sobre un problema.</string>

    <string name="sugerencias">SUGERENCIAS</string>
    <string name="sugerenciasdesc">Tu opinión es valiosa para nosotros.</string>

    <string name="acercade">ACERCA DE</string>

    <!-- -->

    <!--Strings FAQ -->

    <string name="uno">¿Qué es Telcel #NosUne?</string>
    <string name="unodesc">Es la aplicación que te ayudará a estar informado de todas las novedades de Telcel y Grupo Carso.</string>

    <string name="dos">¿Qué debo hacer para utilizar Telcel #NosUne?</string>
    <string name="dosdesc">Debes registrarte proporcionando tu nombre completo, número de empleado, celular, correo electrónico corporativo y se te hará llegar un vínculo con la descarga de la aplicación así como una contraseña con la que podrás ingresar a la aplicación.</string>

    <string name="tres">¿La navegación dentro de la aplicación tiene algún costo?</string>
    <string name="tresdesc">No la navegación dentro de la Telcel #NosUne es gratuita, pero sólo puedes acceder a ella siendo empleado de Telcel.</string>

    <string name="cuatro">¿Cada cuando se actualiza el contenido?</string>
    <string name="cuatrodesc">El contenido se actualiza automáticamente al abrirlo.</string>
    <!-- -->

    <!--Strings ACERCA DE -->

    <string name="descapp">Descripción de la APP</string>
    <string name="versionapp">Versión APP</string>
    <string name="mailapp">mail@app.com</string>

    <!-- -->

    <!--Strings REPORTAR FALLA -->
    <string name="rfdescuno">Reporta tu falla para brindarte un mejor servicio.</string>
    <string name="rfdescdos">Elige la categoría más adecuada.</string>

    <string name="rfuno">La aplicación no siempre me permite ingresar.</string>
    <string name="rfdos">La aplicación no actualiza correctamente.</string>
    <string name="rftres">La aplicación no funciona en el teléfono.</string>
    <string name="rfcuatro">La aplicación se cierra inesperadamente.</string>
    <string name="rfcinco">La aplicación se traba.</string>
    <string name="rfseis">Detalla tu comentario.</string>
    <!-- -->

    <!--SUGERENCIAS -->
    <string name="sugdesc">Tu opinión es valiosa para nosotros, envianos un mensaje</string>
    <string name="mail">Correo electrónico</string>
    <string name="detalle">Detalla tu comentario</string>
    <!-- -->

    <!--Strings MENSAJE ENVIADO -->
    <string name="gracias">Gracias, </string>
    <string name="detallegracias">Tu mensaje ha sido enviado.</string>
    <!-- -->

    <!--Strings RECUPERAR CONTRASEÑA -->
    <string name="contra">Ingresa tu número de empleado y recibirás un correo electrónico con la nueva contraseña. </string>
    <string name="contradesc">Número de empleado</string>
    <string name="title_activity_pil">pil</string>
    <!-- -->

    <!--Strings PIN DE ACCESO -->
    <string name="acceso1">Al generar un nuevo pin o contraseña este te llegará a tu </string>
    <string name="acceso2">Se cerrará la sesión de la aplicación y deberás volver a ingresar con la nueva contraseña.</string>
    <string name="acceso3"><b>correo electrónico corporativo.</b> </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- -->
    <!--Strings TABS -->
    <string name="tab1">COMUNICACIÓN INTERNA </string>
    <string name="tab2">PRODUCTOS Y SERVICIOS</string>
    <string name="tab3">PRESTACIONES </string>
    <string name="tab4">BOLSA</string>
    <string name="tab5">SITIOS DE INTERÉS</string>
    <string name="tab6">LO MÁS NUEVO</string>

    <!--Strings TABS COMUNICACIÓN INTERNA   -->
    <string name="tabs1">PODCAST </string>
    <string name="tabs2">VIDEOS</string>
    <string name="tabs3">REVISTA EN LINEA </string>
    <string name="tabs4">NOTICIAS</string>

    <!--PODCAST -->-
    <string name="URL_media"></string>
    <string name="textoTrivias">Si ganas una trivia, no podrás participar hasta dentro de dos trivias. ¡Gracias por tu participación!</string>
    <string name="tituloPregunta">Pregunta del día</string>
    <!--Interes -->-
    <string name="aprende">aprende.org</string>
    <string name="clarom">claromusica.com</string>
    <string name="clarov">clarovideo.com</string>
    <string name="salud">clikisalud.net</string>
    <string name="holatel">holatelcel.com</string>
    <string name="naturaleza">lanaturalezanosllama.com</string>
    <string name="racing">telcelracing.com</string>
    <string name="prox">¡Próximamente!</string>
    <string name="mitelcel">mitelcel.com</string>
    //Intereses

    <string-array name="Accesorios">
        <item>Abogado</item>
        <item>Aparatos eléctricos</item>
        <item>Baterías</item>
        <item>Bicicletas</item>
        <item>Calentadores solares</item>
        <item>Florería</item>
        <item>Funerarias</item>
        <item>Libros</item>
        <item>Panteón</item>
        <item>Toallas</item>
    </string-array>

    <string-array name="Autos">
        <item>Agencias</item>
        <item>Amortiguadores</item>
        <item>Autos nuevos</item>
        <item>Autos renta</item>
        <item>Autobuses</item>
        <item>Auxilio vial</item>
        <item>Seguros</item>
        <item>Talleres</item>
    </string-array>

    <string-array name="Vivienda">
        <item>Bienes raíces</item>
        <item>Interfon</item>
        <item>Material de construcción</item>
        <item>Muebles</item>
        <item>Persianas</item>
        <item>Purificadores de agua</item>
        <item>Soporte de televisores</item>
        <item>Tienda</item>
    </string-array>

    <string-array name="Educacion">
        <item>Colegios</item>
        <item>Educación</item>
        <item>Escuelas</item>
        <item>Escuela de idiomas</item>
        <item>Institutos</item>
        <item>Jardín de niños</item>
        <item>Maestrías</item>
        <item>Universidades</item>

    </string-array>
    <string-array name="Entretenimiento">
        <item>Actividades deportivas</item>
        <item>Boliche</item>
        <item>Centros culturales</item>
        <item>Circo</item>
        <item>Eventos</item>
        <item>Granja</item>
        <item>Museos</item>
        <item>Parques acuáticos</item>
        <item>Parque de diversión</item>
        <item>Patinaje sobre hielo</item>
        <item>Salones</item>
    </string-array>
    <string-array name="Restaurantes">
        <item>Restaurante - Bar</item>
        <item>Restaurante de mariscos</item>
    </string-array>
    <string-array name="Salud">
        <item>Aparatos auditivos</item>
        <item>Centro médico</item>
        <item>Cirugía estética</item>
        <item>Clínicas</item>
        <item>Estudios genéticos</item>
        <item>Hospitales</item>
        <item>Laboratorios</item>
        <item>Médicos especialistas</item>
        <item>Oftalmólogos</item>
        <item>Oftalmología y ortopedia</item>
        <item>Ortopedia y trauma</item>
        <item>Odontólogos</item>
        <item>Pedicure y manicure</item>
        <item>Psicología</item>
        <item>Quiropráctico</item>
        <item>Terapias deportivas y funcionales</item>
        <item>Terapias de voz, audición y lenguaje</item>
    </string-array>
    <string-array name="Tiendas">
        <item>Discos</item>
        <item>Ropa</item>
        <item>Tiendas</item>
    </string-array>
    <string-array name="Viajes">
        <item>Agencia de viajes</item>
        <item>Hoteles</item>

    </string-array>

    <string name="Accesorios">Accesorios y servicios</string>
    <string name="Autos">Autos</string>
    <string name="Vivienda">Construcción y Vivienda</string>
    <string name="Educacion">Educación</string>
    <string name="Entretenimiento">Entretenimiento</string>
    <string name="Restaurantes">Restaurantes</string>
    <string name="Salud">Salud y Belleza</string>
    <string name="Tiendas">Tiendas Comerciales</string>
    <string name="Viajes">Viajes</string>

</resources>
