<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/ColorFondo"
    tools:context="net.grapesoft.www.telcel.sugerencias">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sugdesc"
        android:id="@+id/textView5"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="40dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mail"
        android:id="@+id/textView6"
        android:textColor="@color/ColorPrimary"
        android:textStyle="bold"
        android:layout_marginTop="46dp"
        android:layout_below="@+id/textView5"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="20"
        android:id="@+id/editText"
        android:theme="@style/MyEditTextTheme"
        android:layout_below="@+id/textView6"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/detalle"
        android:id="@+id/textView7"
        android:textColor="@color/ColorPrimary"
        android:textStyle="bold"
        android:layout_marginTop="34dp"
        android:layout_below="@+id/editText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:ems="20"
        android:id="@+id/editText2"
        android:layout_below="@+id/textView7"
        android:theme="@style/MyEditTextTheme"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="ENVIAR"
        android:background="@drawable/btnshape"
        android:id="@+id/button2"

        android:textColor="@android:color/white"
        android:width="250dp"
        android:layout_marginTop="43dp"
        android:layout_below="@+id/editText2"
        android:layout_centerHorizontal="true"
        android:clickable="false" />

</RelativeLayout>
