<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="start">

    <android.support.design.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        tools:context="net.grapesoft.menu.MainActivity">

        <include layout="@layout/toolbar"/>

        <RelativeLayout     xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            android:background="@color/ColorFondo">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="0dp">
                <TextView
                    android:id="@+id/textView_desc1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rfdescuno"
                    android:textAppearance="?android:attr/textAppearanceSmall"


                    android:paddingTop="10dp"
                    android:paddingBottom="10dp" />
                <TextView
                    android:id="@+id/textView_desc2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rfdescdos"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="@color/ColorPrimary"
                    android:textStyle="bold"
                    android:layout_below="@+id/textView_desc1"
                    />

                <!--    <ListView
                        android:id="@+id/falla"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:divider="#983333"/>-->

                <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/ColorFondo"
                    android:orientation="horizontal"
                    android:weightSum="10" >

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="match_parent"
                        android:paddingTop="15dp"
                        android:paddingBottom="15dp"
                        android:orientation="vertical"
                        android:layout_weight="1" >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/rfuno"
                            android:id="@+id/textView13" />
                    </LinearLayout>

                    <RadioButton
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="15dp"
                        android:paddingBottom="15dp"
                        android:text=""
                        android:id="@+id/rfUnoRB"
                        android:layout_weight="9" />
                </LinearLayout>

                <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/ColorFondo"
                    android:orientation="horizontal"
                    android:weightSum="10" >

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="match_parent"
                        android:paddingTop="15dp"
                        android:paddingBottom="15dp"
                        android:orientation="vertical"
                        android:layout_weight="1" >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/rfdos"
                            android:id="@+id/textView21" />
                    </LinearLayout>

                    <RadioButton
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="15dp"
                        android:paddingBottom="15dp"
                        android:text=""
                        android:id="@+id/rfDosRB"
                        android:layout_weight="9" />
                </LinearLayout>

                <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/ColorFondo"
                    android:orientation="horizontal"
                    android:weightSum="10" >

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="match_parent"
                        android:paddingTop="15dp"
                        android:paddingBottom="15dp"
                        android:orientation="vertical"
                        android:layout_weight="1" >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/rftres"
                            android:id="@+id/textView22" />
                    </LinearLayout>

                    <RadioButton
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="15dp"
                        android:paddingBottom="15dp"
                        android:text=""
                        android:id="@+id/rfTresRB"
                        android:layout_weight="9" />
                </LinearLayout>

                <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/ColorFondo"
                    android:orientation="horizontal"
                    android:weightSum="10" >

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="match_parent"
                        android:paddingTop="15dp"
                        android:paddingBottom="15dp"
                        android:orientation="vertical"
                        android:layout_weight="1" >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/rfcuatro"
                            android:id="@+id/textView23" />
                    </LinearLayout>

                    <RadioButton
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="15dp"
                        android:paddingBottom="15dp"
                        android:text=""
                        android:id="@+id/rfCuartoRB"
                        android:layout_weight="9" />
                </LinearLayout>

                <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/ColorFondo"
                    android:orientation="horizontal"
                    android:weightSum="10" >

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="match_parent"
                        android:paddingTop="15dp"
                        android:paddingBottom="15dp"
                        android:orientation="vertical"
                        android:layout_weight="1" >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/rfcinco"
                            android:id="@+id/textView24" />
                    </LinearLayout>

                    <RadioButton
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="15dp"
                        android:paddingBottom="15dp"
                        android:text=""
                        android:id="@+id/rfCincoRB"
                        android:layout_weight="9" />
                </LinearLayout>

                <TextView
                    android:id="@+id/textView_comentario"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Detalla tu comentario"
                    android:textColor="@color/ColorPrimary"
                    android:textStyle="bold"
                    android:textAppearance="?android:attr/textAppearanceSmall"

                    />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:ems="40"
                    android:theme="@style/MyEditTextTheme"
                    android:id="@+id/txtComentario"

                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/txtErrorComentarioFalla"
                    android:layout_weight=".13"
                    android:layout_marginLeft="26dp"
                    android:textColor="@color/error"/>
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="ENVIAR"
                    android:id="@+id/btnEnviarFalla"
                    android:layout_centerHorizontal="true"
                    android:background="@drawable/btnshape"
                    android:textColor="@android:color/white"
                    android:layout_gravity="center_horizontal"
                    android:width="250dp"
                    android:layout_marginTop="10dp" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/txtErrorFalla"
                    android:layout_weight=".13"
                    android:layout_marginLeft="26dp"
                    android:textColor="@color/error"/>


            </LinearLayout>
        </RelativeLayout>
    </android.support.design.widget.CoordinatorLayout>
    <include layout="@layout/navigation"/>
</android.support.v4.widget.DrawerLayout>
